--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -52,6 +52,5 @@
   </main>
 </div>
 <app-footer>
-  <span><a href="https://coreui.io">CoreUI</a> &copy; 2018 creativeLabs.</span>
-  <span class="ml-auto">Powered by <a href="https://coreui.io/angular">CoreUI for Angular</a></span>
+  <span>Powered by <a href="http://synergicsoftek.in/">Synergic Softek Solutions Pvt. Ltd.</a></span>
 </app-footer>
