--- a/src/app/administrator/clients/client-dashboard/client-dashboard.component.html
+++ b/src/app/administrator/clients/client-dashboard/client-dashboard.component.html
@@ -1,18 +1,32 @@
-<table>
-  <tr>
-    <th>Sl No</th>
-    <th>Client Name</th>
-    <th>Location</th>
-    <th>PIN</th>
-  </tr>
-
-  <tbody *ngIf="clientsDetails">
-    <tr *ngFor="let list of clientsDetails">
-      <td>{{list.sl_no}}</td>
-      <td>{{list.client_name}}</td>
-      <td>{{list.location}}</td>
-      <td>{{list.pin_no}}</td>
-    </tr>
-  </tbody>
-
-</table>
+<div class="animated fadeIn">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="card">
+        <div class="card-header">
+            <a [routerLink]="['/clients/form']" class="btn btn-success"><i class="fa fa-plus" aria-hidden="true"></i> Add Client</a>
+        </div>
+        <div class="card-body">
+          <table class="table table-responsive-sm table-hover table-outline mb-0">
+            <thead class="thead-light">
+              <tr>
+                <th>Sl No</th>
+                <th>Client</th>
+                <th>Location</th>
+                <th>PIN</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody *ngIf="clientsDetails">
+              <tr *ngFor="let list of clientsDetails">
+                <td>{{list.sl_no}}</td>
+                <td>{{list.client_name}}</td>
+                <td>{{list.location}}</td>
+                <td>{{list.pin_no}}</td>
+                <td><a [routerLink]="['/clients/form']"><i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
