--- a/src/app/administrator/clients/client-edit-form/client-edit-form.component.html
+++ b/src/app/administrator/clients/client-edit-form/client-edit-form.component.html
@@ -3,82 +3,89 @@
     <div class="col-md-12">
       <div class="card">
         <div class="card-header">
-          <strong>Basic Form</strong> Elements
+          <strong>Edit Client</strong>
         </div>
         <div class="card-body">
           
           <form [formGroup]="fGroup" (ngSubmit)="editClient()">
             
-              <div class="form-group row">
+            <div class="form-group row">
 
-                <label for="name" class="col-sm-2 col-form-label">Client's Name:</label>
+              <label for="name" class="col-sm-2 col-form-label">Client's Name:</label>
 
-                <div class="col-sm-6">
+              <div class="col-sm-6">
 
-                  <input type="text" 
+                <input type="text" 
+                        class="form-control"
+                        formControlName="name"
+                        >
+              </div>
+
+              <div class="col-sm-4">
+                <div style="color:red;" *ngIf="fGroup.controls.name.hasError('required') && fGroup.controls['name'].touched ">This Field id Required</div>
+              </div>
+            
+            </div>
+
+            <div class="form-group row">
+            
+              <label for="address" class="col-sm-2 col-form-label">Address:</label>
+
+              <div class="col-sm-6">
+
+                  <textarea formControlName="address" class="form-control" cols="30" rows="5"></textarea>
+
+              </div>
+
+              <div class="col-sm-4">
+                <div style="color:red;" *ngIf="fGroup.controls.address.hasError('required') && fGroup.controls['address'].touched ">This Field id Required</div>
+                <div style="color:red;" *ngIf="fGroup.controls.address.hasError('minlength')">Min Lenght 10</div>
+                <div style="color:red;" *ngIf="fGroup.controls.address.hasError('maxlength') ">Max Lenght 600</div>
+              </div>
+
+            </div>
+
+            <div class="form-group row">
+            
+              <label for="address" class="col-sm-2 col-form-label">Location:</label>
+
+              <div class="col-sm-6">
+
+                  <input type="text"
+                         class="form-control"
+                         formControlName="location"
+                  >
+
+              </div>
+
+              <div class="col-sm-4">
+                <div style="color:red;" *ngIf="fGroup.controls.location.hasError('required') && fGroup.controls['location'].touched ">This Field id Required</div>
+              </div>
+
+            </div>
+
+            <div class="form-group row">
+            
+              <label for="address" class="col-sm-2 col-form-label">PIN:</label>
+
+              <div class="col-sm-6">
+
+                  <input type="text"
                           class="form-control"
-                          formControlName="name"
-                          >
-                </div>
-
-                <div class="col-sm-4">
-                  <div style="color:red;" *ngIf="!fGroup.controls['name'].valid && fGroup.controls['name'].touched ">This Field id Required</div>
-                </div>
-              
-              </div>
-
-              <div class="form-group row">
-              
-                <label for="address" class="col-sm-2 col-form-label">Address:</label>
-
-                <div class="col-sm-6">
-
-                    <textarea formControlName="address" class="form-control" cols="30" rows="5"></textarea>
-
-                </div>
-
-                <div class="col-sm-4">
-                  <div style="color:red;" *ngIf="!fGroup.controls['address'].valid && fGroup.controls['address'].touched ">This Field id Required</div>
-                </div>
+                          formControlName="pin"
+                  >
 
               </div>
 
-              <div class="form-group row">
-              
-                <label for="address" class="col-sm-2 col-form-label">Location:</label>
-
-                <div class="col-sm-6">
-
-                    <input type="text"
-                           class="form-control"
-                           formControlName="location"
-                    >
-
-                </div>
-
-                <div class="col-sm-4">
-                  <div style="color:red;" *ngIf="!fGroup.controls['location'].valid && fGroup.controls['location'].touched ">This Field id Required</div>
-                </div>
+              <div class="col-sm-4">
+                
+                <div style="color:red;" *ngIf="fGroup.controls.pin.hasError('required') && fGroup.controls['pin'].touched ">This Field id Required</div>
+                <div style="color:red;" *ngIf="fGroup.controls.pin.hasError('pattern') ">Numbers Only</div>
+                <div style="color:red;" *ngIf="fGroup.controls.pin.hasError('minlength') ">Min Lenght 6</div>
+                <div style="color:red;" *ngIf="fGroup.controls.pin.hasError('maxlength') ">Max Lenght 6</div>
 
               </div>
-
-              <div class="form-group row">
-              
-                <label for="address" class="col-sm-2 col-form-label">PIN:</label>
-
-                <div class="col-sm-6">
-
-                    <input type="text"
-                            class="form-control"
-                            formControlName="pin"
-                    >
-
-                </div>
-
-                <div class="col-sm-4">
-                  <div style="color:red;" *ngIf="!fGroup.controls['pin'].valid && fGroup.controls['pin'].touched ">This Field id Required</div>
-                </div>
-              </div>
+            </div>
 
               <div class="form-group row">
                   <div class="col-sm-6">
