--- a/src/app/administrator/courier-comps/courier-comp-form/courier-comp-form.component.html
+++ b/src/app/administrator/courier-comps/courier-comp-form/courier-comp-form.component.html
@@ -3,15 +3,15 @@
     <div class="col-md-12">
       <div class="card">
         <div class="card-header">
-          <strong>New Client</strong>
+          <strong>New Courier Company</strong>
         </div>
         <div class="card-body">
           
-          <form [formGroup]="fGroup" (ngSubmit)="addClient()">
+          <form [formGroup]="fGroup" (ngSubmit)="submit()">
             
               <div class="form-group row">
 
-                <label for="name" class="col-sm-2 col-form-label">Client's Name:</label>
+                <label for="name" class="col-sm-2 col-form-label">Company Name:</label>
 
                 <div class="col-sm-6">
 
@@ -22,7 +22,9 @@
                 </div>
 
                 <div class="col-sm-4">
-                  <div style="color:red;" *ngIf="fGroup.controls.name.hasError('required') && fGroup.controls.name.touched ">This Field id Required</div>
+                  
+                  <div style="color:red;" *ngIf="fGroup.controls.name.hasError('required') && fGroup.controls.name.touched ">This Field is Required</div>
+                  
                 </div>
               
               </div>
@@ -38,52 +40,50 @@
                 </div>
 
                 <div class="col-sm-4">
-                  <div style="color:red;" *ngIf="fGroup.controls.address.hasError('required') && fGroup.controls['address'].touched ">This Field id Required</div>
-                  <div style="color:red;" *ngIf="fGroup.controls.address.hasError('minlength')">Min Lenght 10</div>
-                  <div style="color:red;" *ngIf="fGroup.controls.address.hasError('maxlength') ">Max Lenght 600</div>
+                  
                 </div>
 
               </div>
 
               <div class="form-group row">
               
-                <label for="address" class="col-sm-2 col-form-label">Location:</label>
+                <label for="address" class="col-sm-2 col-form-label">Contact No:</label>
 
                 <div class="col-sm-6">
 
                     <input type="text"
                            class="form-control"
-                           formControlName="location"
-                    >
-
-                </div>
-
-                <div class="col-sm-4">
-                  <div style="color:red;" *ngIf="fGroup.controls.location.hasError('required') && fGroup.controls['location'].touched ">This Field id Required</div>
-                </div>
-
-              </div>
-
-              <div class="form-group row">
-              
-                <label for="address" class="col-sm-2 col-form-label">PIN:</label>
-
-                <div class="col-sm-6">
-
-                    <input type="text"
-                            class="form-control"
-                            formControlName="pin"
+                           formControlName="contact_no"
                     >
 
                 </div>
 
                 <div class="col-sm-4">
                   
-                  <div style="color:red;" *ngIf="fGroup.controls.pin.hasError('required') && fGroup.controls['pin'].touched ">This Field id Required</div>
-                  <div style="color:red;" *ngIf="fGroup.controls.pin.hasError('pattern') ">Numbers Only</div>
-                  <div style="color:red;" *ngIf="fGroup.controls.pin.hasError('minlength') ">Min Lenght 6</div>
-                  <div style="color:red;" *ngIf="fGroup.controls.pin.hasError('maxlength') ">Max Lenght 6</div>
+                  <div style="color:red;" *ngIf="fGroup.controls.contact_no.hasError('required') && fGroup.controls.contact_no.touched ">This Field id Required</div>
+                  <div style="color:red;" *ngIf="fGroup.controls.contact_no.hasError('pattern') ">Numbers Only</div>
+                  <div style="color:red;" *ngIf="fGroup.controls.contact_no.hasError('minlength') ">Min Lenght 6</div>
+                  <div style="color:red;" *ngIf="fGroup.controls.contact_no.hasError('maxlength') ">Max Lenght 6</div>
 
+                </div>
+
+              </div>
+
+              <div class="form-group row">
+              
+                <label for="address" class="col-sm-2 col-form-label">Contact Person:</label>
+
+                <div class="col-sm-6">
+
+                    <input type="text"
+                            class="form-control"
+                            formControlName="contact_person"
+                    >
+
+                </div>
+
+                <div class="col-sm-4">
+                  <div style="color:red;" *ngIf="!fGroup.controls['contact_person'].valid && fGroup.controls['contact_person'].touched ">This Field id Required</div>
                 </div>
               </div>
 
