--- a/src/app/administrator/courier-service/courier-service-dashboard/courier-service-dashboard.component.html
+++ b/src/app/administrator/courier-service/courier-service-dashboard/courier-service-dashboard.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12">
       <div class="card">
         <div class="card-header">
-            <a [routerLink]="['/courier-service/in']" class="btn btn-success"><i class="fa fa-plus" aria-hidden="true"></i> Courier In</a>
+            <a [routerLink]="['/courier-service/form']" class="btn btn-success"><i class="fa fa-plus" aria-hidden="true"></i> Courier In</a>
         </div>
         <div class="card-body">
           <table class="table table-responsive-sm table-hover table-outline mb-0">
@@ -30,7 +30,15 @@
                 <td>{{list.courier_name}}</td>
                 <td>{{list.doc_no}}</td>
                 <td>{{list.status}}</td>
-                <td><a [routerLink]="['/courier-service/out', list.sl_no]"><i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a></td>
+                <td><a [routerLink]="['/courier-service/form', list.sl_no]"><i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a>
+                    
+                    <a href="javascript:void(0)" 
+                       (click)="delete(list.sl_no)"
+                       style="color: #fc4b6c"
+                       ><i class="fa fa-times fa-lg" aria-hidden="true"></i>
+                    </a>
+
+                </td>
               </tr>
             </tbody>
           </table>
