--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -1,7 +1,7 @@
 <app-header
   [fixed]="true"
   [navbarBrandFull]="{src: 'assets/img/brand/sss.png', width: 70, height: 30, alt: 'Synergic Logo'}"
-  [navbarBrandMinimized]="{src: 'assets/img/brand/comp.png', width: 30, height: 30, alt: 'Synergic Logo'}"
+  [navbarBrandMinimized]="{src: 'assets/img/brand/sss.png', width: 30, height: 30, alt: 'Synergic Logo'}"
   [sidebarToggler]="'lg'"
   [asideMenuToggler]="'lg'">
   <ul class="nav navbar-nav d-md-down-none">
