--- a/src/app/administrator/courier-service/courier-service-dashboard/courier-service-dashboard.component.html
+++ b/src/app/administrator/courier-service/courier-service-dashboard/courier-service-dashboard.component.html
@@ -3,7 +3,40 @@
     <div class="col-lg-12">
       <div class="card">
         <div class="card-header">
-            <a [routerLink]="['/courier-service/form']" class="btn btn-success"><i class="fa fa-plus" aria-hidden="true"></i> Courier In</a>
+          <form [formGroup]="fGroup">
+            <div class="row">
+              <div class="col-md-6">
+                  <a [routerLink]="['/courier-service/form']" class="btn btn-success"><i class="fa fa-plus" aria-hidden="true"></i> Courier In</a>
+              </div>
+  
+              <div class="col-md-3">
+                <input type="text" class="form-control" formControlName="year" />
+              </div>
+  
+              <div class="col-md-3">
+  
+                <select class=form-control 
+                        formControlName="month"
+                        (change)="onMonthChange()"
+                    >
+                    <option value="1">January</option>
+                    <option value="2">February</option>
+                    <option value="3">March</option>
+                    <option value="4">April</option>
+                    <option value="5">May</option>
+                    <option value="6">June</option>
+                    <option value="7">July</option>
+                    <option value="8">August</option>
+                    <option value="9">September</option>
+                    <option value="10">October</option>
+                    <option value="11">November</option>
+                    <option value="12">December</option>
+                </select>
+                
+              </div>
+            
+            </div>  
+          </form>   
         </div>
         <div class="card-body">
           <table class="table table-responsive-sm table-hover table-outline mb-0">
