--- a/src/app/administrator/courier-service/courier-service-dashboard/courier-service-dashboard.component.html
+++ b/src/app/administrator/courier-service/courier-service-dashboard/courier-service-dashboard.component.html
@@ -6,7 +6,7 @@
           <form [formGroup]="fGroup">
             <div class="row">
               <div class="col-md-6">
-                  <a [routerLink]="['/courier-service/form']" class="btn btn-success"><i class="fa fa-plus" aria-hidden="true"></i> Courier In</a>
+                  <a [routerLink]="['/courier-service/form']" class="btn btn-success"><i class="fa fa-plus" aria-hidden="true"></i> Courier Out / In</a>
               </div>
   
               <div class="col-md-3">
